[package]
name = "logdash"
version = "1.0.1"
edition = "2024"
license = "MIT"
authors = ["firesz25 <olek.cz@outlook.com>"]
readme = "README.md"
repository = "https://github.com/logdash-io/rust-sdk"
homepage = "https://github.com/logdash-io/rust-sdk"
description = "Logdash.io simple client"
keywords = ["api", "sdk", "metrics", "logging", "logdash"]

[dependencies]
owo-colors = { version = "4.2.1" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
time = { version = "0.3.41", features = ["formatting", "serde"] }
ureq = { version = "3.0.11", default-features = false, features = [
    "json",
    "gzip",
] }

[features]
default = ["rustls"]
rustls = ["ureq/rustls"]
native-tls = ["ureq/native-tls"]
